2005-12-05  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b3)

	* Fixed bug introduced in b2 when loading settings.

2005-12-02  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b2)

	* Added settings to change the font and font size in slideshow.
	  There is no user-interface to set these, you have to change them
	  in the GalleryRemote.properties or GalleryRemoteApplet.properties
	  files.
	* Downloading the list of albums is slightly more robust.
	* The thumbs temporary directory is now postfixed with the
	  current username, so on multiuser systems different users
	  will be able to use GR concurrently. Thanks mattdm.
	* Reworked the way defaults and prefs are loaded to they can be more
	  flexibly overriden by the server, in the case of the applet.

2005-09-23  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b1)

	* Fixed getting album list and creating albums when the names
	  of albums contain non-ASCII characters (using UTF-8).

2005-09-20  Pierre-Luc Paour <gallery@paour.com> (1.5)

	* Release.
	* Installer built using IA 7.1, which supports Java 5.

2005-09-20  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b27)

	* With G2, the slideshow now increments the view count on images.

2005-08-26  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b26)

	* Slideshows starting on a specific picture (G2 only) now start
	  on the right picture, not the next one...
	* The preload thread for pictures in a slideshow is now running
	  at a lowered priority, which reduces makes the slideshow more
	  reponsive.
	* G2 now has a recursive and limitable slideshow.

2005-08-18  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b25)

	* GR now uploads images and creates albums with UTF-8 when
	  connected to G2. This fixes improper behavior when using non-ASCII
	  characters. This only happens if HTML escaping is disabled.

2005-08-06  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b24)

	* GR can now find ImageMagick on its own on Windows, by looking in